implement import localization data batch job function - additional tests